Closes issue #534